--- a/.prettierignore
+++ b/.prettierignore
@@ -1,3 +1,8 @@
 resources/js/components/ui/*
 resources/js/ziggy.js
 resources/views/mail/*
+.DS_Store
+.env
+node_modules
+public/.DS_Store
+*.DS_Store
